# ChangeLog for media-sound/guayadeque
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/guayadeque/ChangeLog,v 1.11 2011/12/05 16:49:30 jlec Exp $

  05 Dec 2011; Justin Lecher <jlec@gentoo.org> guayadeque-0.3.1.ebuild:
  Add dep on media-plugins/gst-plugins-soup for shoutcast support, #393263

  20 Nov 2011; Justin Lecher <jlec@gentoo.org> guayadeque-0.3.1.ebuild:
  Build if svn-1.7 is installed, drop optimization

  19 Nov 2011; Samuli Suominen <ssuominen@gentoo.org> guayadeque-0.2.9.ebuild,
  guayadeque-0.3.1.ebuild, metadata.xml:
  Rename USE="indicate" to USE="ayatana" to get it covered by the current
  use.mask.

  07 Oct 2011; Justin Lecher <jlec@gentoo.org> guayadeque-0.2.7.ebuild,
  guayadeque-0.2.9.ebuild, guayadeque-0.3.1.ebuild:
  Remove USE=gstreamer requirement from wxGTK, #383671


  17 Jul 2011; Justin Lecher <jlec@gentoo.org> guayadeque-0.2.7.ebuild,
  guayadeque-0.2.9.ebuild, guayadeque-0.3.1.ebuild, metadata.xml:
  Fix for change in wxwidgets.eclass

*guayadeque-0.3.1 (04 Jun 2011)

  04 Jun 2011; Justin Lecher <jlec@gentoo.org> +guayadeque-0.3.1.ebuild:
  Version Bump, #369953

  23 Feb 2011; Justin Lecher <jlec@gentoo.org> guayadeque-0.2.9.ebuild:
  Depend on X support on wxGtk, #355953

*guayadeque-0.2.9 (22 Feb 2011)

  22 Feb 2011; Justin Lecher <jlec@gentoo.org> +guayadeque-0.2.9.ebuild,
  metadata.xml:
  Version Bumo, #355769

  20 Feb 2011; Justin Lecher <jlec@gentoo.org> guayadeque-0.2.7.ebuild,
  metadata.xml:
  Better handling of langs, corrected maintainer email

  20 Feb 2011; Justin Lecher <jlec@gentoo.org> guayadeque-0.2.7.ebuild:
  No tests available

*guayadeque-0.2.7 (20 Feb 2011)

  20 Feb 2011; Justin Lecher <jlec@gentoo.org> +guayadeque-0.2.7.ebuild,
  +metadata.xml:
  New addition, written by Lukas, enhanced by unknown contributor
