@@ -6,13 +6,13 @@ DIST guayadeque-0.2.9.tar.bz2 2827923 RMD160 a5ed371d74c1d224839bc5f30f993fc5efd
 DIST guayadeque-0.3.1.tar.bz2 2927564 RMD160 80f3895202622f2e0e556164db1afe440e460be5 SHA1 01d7c238af9846d46ffdd6d7b2cedb6d0d647e7c SHA256 547e2f629772f36808c58fad02d97bd4f959c146db251da3d5a0f73c807dfc04
 EBUILD guayadeque-0.2.7.ebuild 1274 RMD160 4b856ed1705642ed102017e336dad158ee62a656 SHA1 1d29c6ed4c3f91c665d581ac3ba7c786c4a9a33c SHA256 567fc49e4c64d5cdebb64268c20bf60dc005fc0d0ee94c686169af42000fde54
 EBUILD guayadeque-0.2.9.ebuild 1601 RMD160 7e2f29737ff254cf8c32343951355ee79357871f SHA1 4aefef28f3bf69db3567d31794867f9185168e87 SHA256 bb9446c76b37497a37bc522469a9491babcca7c59a5744c7a19b3be0fd6cf806
-EBUILD guayadeque-0.3.1.ebuild 1750 RMD160 9b61ad9cb1f687ae70648e450670c32516241b01 SHA1 89bc8c23b07f4fa560004d474db5abac19088e14 SHA256 b80cb8271d7f3fcab1ea0fc3ef8cb35ec4f96aa12401f9087d90b87998ba690f
-MISC ChangeLog 1871 RMD160 f6adeee32296457d9fbb675d09e396aacb98c5ef SHA1 3c30c4b3ad0006c858dc7d644b032f96e457eb0c SHA256 c7505979f7501b838700567981c13eb6f2aa1e276ff0a1e4f309459ecb978b46
+EBUILD guayadeque-0.3.1.ebuild 1725 RMD160 66297e318a677dbe12d723eb9d9458fa7e3ed0da SHA1 9df521ae842de96d14bacfc1050c51378a75c842 SHA256 689bc3fdc36f60760fb0a3be22c369a44a10927ca4a7dc8cd4a578fef32f77ec
+MISC ChangeLog 1973 RMD160 6bfc27f5507e6c0af96d058d83ef3807c0a55bac SHA1 b47f65f4c2c1c797eaca02f33859391e921be11d SHA256 2dcd160739f52d58f6073104a3faf864fdd5b5701bc35e4d23a298f9334c39fb
 MISC metadata.xml 347 RMD160 7cc9594830a8da3c99d99229c834b2c21cdb3ad9 SHA1 27a52d6e8de829abc205e960c5a2edb8aa2a318c SHA256 f09ec2313f3f604f098c648694a51cbb3fd5ab4139c7e5b5c4e1d7a1a455d926
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.18 (GNU/Linux)
 
-iEYEAREKAAYFAk7c9h4ACgkQgAnW8HDreRbOCwCgw/O3TWCQincmsbi0d9PEF4O/
-byUAn0aCJUJf6vwpweWURmGO04Azigly
-=vkRE
+iEYEAREKAAYFAk8EGAcACgkQgAnW8HDreRYRYACgn05y+vqZLHM9s0jQr40U/thL
+JuwAoKDVeQKGSM/yhsX+wqsh2NFKvuby
+=xAgN
 -----END PGP SIGNATURE-----
