@@ -1,6 +1,9 @@
 # ChangeLog for media-sound/guayadeque
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/guayadeque/ChangeLog,v 1.11 2011/12/05 16:49:30 jlec Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-sound/guayadeque/ChangeLog,v 1.12 2012/01/04 09:12:29 jlec Exp $
+
+  04 Jan 2012; Justin Lecher <jlec@gentoo.org> guayadeque-0.3.1.ebuild:
+  Use esvn_clean from eutils
 
   05 Dec 2011; Justin Lecher <jlec@gentoo.org> guayadeque-0.3.1.ebuild:
   Add dep on media-plugins/gst-plugins-soup for shoutcast support, #393263
